feat(release-notes): move header env variable

--- a/docs/how-to-guides/environment-variables.mdx
+++ b/docs/how-to-guides/environment-variables.mdx
@@ -274,6 +274,7 @@ On the other hand, for development purposes, setting the `DEBUG` environment var
 You must redeploy your backend project application after updating the environment variables. Otherwise, the change will not be reflected.
 :::
 
+
 ### Visual Feedback
 The `DEBUG` environment variable can also be used within your frontend (React) applications.
 
@@ -297,7 +298,22 @@ process.env.REACT_APP_DEBUG = "true";
 ```
 
 
+## Enable Webiny Version Header Environment Variable
 
+The `WEBINY_ENABLE_VERSION_HEADER` environment variable is used to add the Webiny version header to all GraphQL response headers.
+By default, version headers are not set into the response headers. If you want the version headers to be included, you must set the environment variable to `true`.
+
+Only the `true` word will have effect. If you set it to anything else, `WEBINY_ENABLE_VERSION_HEADER` will be considered as `false` / not set.
+
+```bash
+WEBINY_ENABLE_VERSION_HEADER=true
+```
+
+When the environment variable is set to true it will add the `x-webiny-version` header. Which looks like this:
+
+```yaml
+x-webiny-version: 5.21.0
+```
 
 
 ## FAQ
