feat(release-notes): move header env variable

--- a/docs/release-notes/5.21.0/changelog.mdx
+++ b/docs/release-notes/5.21.0/changelog.mdx
@@ -18,4 +18,4 @@ We added the non-null input mark (`!`) for the fields which have `required` vali
 
 ### Added Webiny Version Header To GraphQL Response ([#2143](https://github.com/webiny/webiny-js/pull/2143))
 
-We added the Webiny version header to every GraphQL response. By default, header is not added. To add it into the output, read our article about [environment variables](/docs/key-topics/environment-variables).
+We added the Webiny version header to every GraphQL response. By default, header is not added. To add it into the output, read our article about [environment variables](/docs/how-to-guides/environment-variables#enable-webiny-version-header-environment-variable).
