fix(key-topics): headless cms lifecycle events

--- a/docs/key-topics/headless-cms/lifecycle-events.mdx
+++ b/docs/key-topics/headless-cms/lifecycle-events.mdx
@@ -81,6 +81,12 @@ import { CmsContext } from "@webiny/api-headless-cms/types";
 import { ContextPlugin } from "@webiny/handler/plugins/ContextPlugin";
 
 const notifyDifferentSystemWhenEntryIsCreated = new ContextPlugin<CmsContext>(async context => {
+	/**
+     * There is no context.cms when request is an OPTIONS one
+     */
+    if (!context.cms) {
+        return;
+    }
     context.cms.onAfterEntryCreate.subscribe(async params => {
         const {
             /**
