feat: add naming conventions section

--- a/docs/how-to-guides/webiny-applications/admin-area/framework.mdx
+++ b/docs/how-to-guides/webiny-applications/admin-area/framework.mdx
@@ -248,7 +248,7 @@ export const App = () => {
 };
 ```
 
-## Extracting Extensions Into Components
+## Extracting Extensions Into a Plugin
 
 You can extract your extensions into a dedicated component, or even an NPM package, because `Admin` component doesn't care about the hierarchy, so you can mount those components anywhere. The following example shows how you would combine all the components covered in this article into a single plugin component, which adds a Provider, composes an existing React component, adds menus and routes, and even has permission checks.
 
@@ -300,4 +300,26 @@ export const App = () => {
 
 :::info Important
 The only rule to be aware of, is that you **must** mount the `<Provider/>` element _outside_ of the `<Extensions/>` element. `<Compose/>` can go anywhere, as it doesn't affect the app hierarchy.
+:::
+
+## Naming Conventions
+
+There are many components exported from the `@webiny/app-serverless-cms` package. These naming conventions will help you find your way around, and quickly filter out components in your IDE.
+
+- components that _add_ things to the system start with `Add` prefix (e.g., `AddMenu`)
+- presentation components end with `Renderer` (e.g., `MenuItemRenderer`)
+- hooks, by React convention, start with `use` (e.g., `useSecurity`)
+
+Almost always, renderer components go with a parent component that provides a React Context to the renderer. For example, a `UserMenuItem` has a corresponding `UserMenuItemRenderer` component. The renderer component doesn't take any props; instead, it uses hooks to fetch the relevant data from React Context, provided by the `UserMenuItem` component. This approach drastically reduces prop drilling, and makes it easier to decouple logic from presentation. This topic will be covered in more details in a dedicated article.
+
+If you want to change the appearance (the renderer) of a certain component, always look for the `Renderer` part of it, and compose _that_ component.
+
+## Conclusion
+
+These few simple components is what makes up the core of the Admin Area application. This provides strong and simple fundamentals to build upon. It's easily composable, and gives the ability to lazy-load plugins, apply extensions conditionally, compose component renderers, and also compose these atomic components into larger plugins.
+
+:::tip
+In the prior versions of Webiny, we relied on a global plugins registry, and plugins as objects. This approach still works, and all your existing plugins will work as if nothing changed.
+
+However, the core Webiny apps will slowly be transitioning to this new React based API, and we'll be exposing more extension components as we go.
 :::
