--- a/docs/tutorials/create-custom-application/security/react-application/integrating-hosted-ui-authentication-flow.mdx
+++ b/docs/tutorials/create-custom-application/security/react-application/integrating-hosted-ui-authentication-flow.mdx
@@ -111,7 +111,7 @@ const Layout: React.FC<{ className: string }> = (props) => {
                 }
               >
                 <Avatar size={"large"} style={{ cursor: "pointer" }}>
-                  {identity.firstName.charAt(0)}
+                  {identity.displayName.charAt(0)}
                 </Avatar>
               </Dropdown>
             </>
