--- a/docs/tutorials/create-custom-application/security/react-application/initial-setup.mdx
+++ b/docs/tutorials/create-custom-application/security/react-application/initial-setup.mdx
@@ -85,48 +85,47 @@ We will define the [`Authenticator`](https://github.com/webiny/webiny-examples/b
 ```tsx title="pinterest-clone/app/code/src/components/Authenticator.tsx"
 import React, { useEffect } from "react";
 import Auth from "@aws-amplify/auth";
-import { useSecurity, SecurityIdentity } from "@webiny/app-security";
+import { useSecurity } from "@webiny/app-security";
 
 // Apart from the React component, we also configure the Auth class here.
 Auth.configure({
-  region: process.env.REACT_APP_USER_POOL_REGION,
-  userPoolId: process.env.REACT_APP_USER_POOL_ID,
-  userPoolWebClientId: process.env.REACT_APP_USER_POOL_WEB_CLIENT_ID,
-  oauth: {
-    domain: process.env.REACT_APP_USER_POOL_DOMAIN,
-    redirectSignIn: `${location.origin}?signIn`,
-    redirectSignOut: `${location.origin}?signOut`,
-    responseType: "token",
-  },
+    region: process.env.REACT_APP_USER_POOL_REGION,
+    userPoolId: process.env.REACT_APP_USER_POOL_ID,
+    userPoolWebClientId: process.env.REACT_APP_USER_POOL_WEB_CLIENT_ID,
+    oauth: {
+        domain: process.env.REACT_APP_USER_POOL_DOMAIN,
+        redirectSignIn: `${location.origin}?signIn`,
+        redirectSignOut: `${location.origin}?signOut`,
+        responseType: "token"
+    }
 });
 
 // The `Authenticator` component.
-const Authenticator: React.FC = (props) => {
-  const { setIdentity } = useSecurity();
+const Authenticator: React.FC = props => {
+    const { setIdentity } = useSecurity();
 
-  useEffect(() => {
-    // Get the currently signed in user.
-    Auth.currentSession()
-      .then((response) => {
-        const user = response.getIdToken().payload;
-        setIdentity(
-          new SecurityIdentity({
-            login: user.email,
-            firstName: user.given_name,
-            lastName: user.family_name,
-            logout: () => {
-              Auth.signOut();
-              setIdentity(null);
-            },
-          })
-        );
-      })
-      .catch(() => {
-        /* Do nothing. */
-      });
-  }, []);
+    useEffect(() => {
+        // Get the currently signed in user.
+        Auth.currentSession()
+            .then(response => {
+                const user = response.getIdToken().payload;
+                setIdentity({
+                    id: user.email,
+                    type: "user",
+                    displayName: user.given_name + " " + user.family_name,
+                    permissions: [],
+                    logout: () => {
+                        Auth.signOut();
+                        setIdentity(null);
+                    }
+                });
+            })
+            .catch(() => {
+                /* Do nothing. */
+            });
+    }, []);
 
-  return <>{props.children}</>;
+    return <>{props.children}</>;
 };
 
 export default Authenticator;
