refactor(page-builder): lifecycle events

--- a/docs/key-topics/page-builder/lifecycle-events.mdx
+++ b/docs/key-topics/page-builder/lifecycle-events.mdx
@@ -81,7 +81,7 @@ This event is triggered before settings data is going to be stored.
 | original | Settings object which was received from storage |
 | settings | Settings object which was changed by user input |
 | meta | Metadata |
-| meta.diff.pages | Array which contains calculated page changes |
+| meta.diff.pages | Array which contains which pages were changed |
 
 
 ##### How to subscribe to this event?
